Updated bundle for Symfony 4

--- a/src/Stsbl/InternetBundle/Resources/views/Nac/index.html.twig
+++ b/src/Stsbl/InternetBundle/Resources/views/Nac/index.html.twig
@@ -10,7 +10,7 @@
                 </div>
                 <div class="panel-body print-new-pac">
                     {{ form_start(addForm) }}
-                    {{ form_row(addForm.value) }}
+                    {{ form_row(addForm.duration) }}
                     {{ form_end(addForm) }}
                 </div>
             </div>
