Fixed webpack usage

--- a/src/Stsbl/InternetBundle/Resources/views/Nac/index.html.twig
+++ b/src/Stsbl/InternetBundle/Resources/views/Nac/index.html.twig
@@ -31,6 +31,6 @@
         {% if app.environment != 'prod' %}
             <!-- {{ _self }} => printnacs.js -->
         {% endif %}
-        <script type="text/javascript" src="{{ asset('js/printnacs.js', 'stsbl-internet') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/printnacs.js', 'stsbl_internet') }}"></script>
     {% endif %}
 {% endblock %}
