Fixed extension compat

--- a/src/Stsbl/InternetBundle/Resources/views/Default/index.html.twig
+++ b/src/Stsbl/InternetBundle/Resources/views/Default/index.html.twig
@@ -16,7 +16,7 @@
     {% if app.environment != 'prod' %}
         <!-- {{ _self }} => internet.css -->
     {% endif %}
-     <link rel="stylesheet" href="{{ asset('css/internet.css'. 'stsbl_internet') }}">
+     <link rel="stylesheet" href="{{ asset('css/internet.css', 'stsbl_internet') }}" />
 {% endblock %}
 
 {% block content %}
