Twig: Replaced spaceless with apply spaceless

--- a/modules/Stsbl/InternetBundle/Resources/views/Default/index.html.twig
+++ b/modules/Stsbl/InternetBundle/Resources/views/Default/index.html.twig
@@ -4,9 +4,9 @@
 {% set networkService = controller.network %}
 
 {% block page_title %}
-    {% spaceless %}
+    {% apply spaceless %}
         {{ _('Internet') }}
-    {% endspaceless %}
+    {% endapply spaceless %}
 {% endblock %}
 
 {% block stylesheets %}
