--- a/modules/Stsbl/InternetBundle/Resources/views/Default/index.html.twig
+++ b/modules/Stsbl/InternetBundle/Resources/views/Default/index.html.twig
@@ -6,7 +6,7 @@
 {% block page_title %}
     {% apply spaceless %}
         {{ _('Internet') }}
-    {% endapply spaceless %}
+    {% endapply %}
 {% endblock %}
 
 {% block stylesheets %}
